# mermaid-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml  test.yml
contrib/aur/: PKGBUILD
contrib/scoop/: mermaid-cli.json
docs/: ACCEPTANCE_CHECKLIST.md  API.md  ARCHITECTURE.md  DEVELOPMENT.md  DIAGNOSE_20260622_2216.md  DIAGNOSE_FINAL_20260622_2222.md  INDEX.md  P1_PROGRESS.md  P2-DEVELOPMENT-PLAN.md  PROJECT_PLAN.md  QUICK_START.md  README.md  ROADMAP.md  STARTUP_SUMMARY.md
memory/: new_chart_types_timeline_gitgraph_mindmap.md
openspec/changes/archive/2026-06-15-code-quality-testing-cicd/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-15-code-quality-testing-cicd/specs/ci-cd-pipeline/: spec.md
openspec/changes/archive/2026-06-15-code-quality-testing-cicd/specs/code-quality/: spec.md
openspec/changes/archive/2026-06-16-fix-node-label-parsing/: design.md  proposal.md  tasks.md
openspec/changes/p2-phase1-node-shapes/: design.md  proposal.md  tasks.md
openspec/changes/p2-phase1-node-shapes/specs/node-label-parsing/: spec.md
openspec/changes/p2-phase1-node-shapes/specs/node-shapes/: spec.md
src/: lib.rs  main.rs
src/config/: mod.rs
src/fixer/: mod.rs
src/parser/: ast.rs  lexer.rs  lexer.rs.mybackup  mod.rs
src/pdf/: mod.rs
src/renderer/: mod.rs
src/svg/: mod.rs
tests/: api_tests.rs  cli_tests.rs  fixes_input.mmd  render_benchmarks.rs
wasm/.github/workflows/: build.yml  release.yml
(+2 files in other folders)
