[package]
name = "mermaid-cli"
version = "0.1.0-alpha"
edition = "2021"
authors = ["Hao430"]
description = "High-performance Mermaid CLI tool written in Rust"
license = "MIT"
repository = "https://github.com/yourusername/mermaid-cli"

[dependencies]
resvg = { version = "0.42", optional = true }
usvg = { version = "0.42", optional = true }
tiny-skia = { version = "0.11", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
# printpdf = { version = "0.9", optional = true } # PDF output - future feature

[features]
default = []
json = ["serde", "serde_json"]
png = ["resvg", "usvg", "tiny-skia"]

[dev-dependencies]
# tempfile = "3.8"

[[bin]]
name = "mermaid-cli"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
